--- a/leave-management/Views/LeaveTypes/Index.cshtml
+++ b/leave-management/Views/LeaveTypes/Index.cshtml
@@ -4,12 +4,19 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
+    <div class="row">
+        <div class="col-md-6">
+            <h1>Leave Types</h1>
+        </div>
+        <div class="col-md-6 text-right" style="padding-top: 10px">
+            <a asp-action="Create" class="btn btn-success "><i class="fa fa-plus" aria-hidden="true"></i> Create New</a>
+        </div>
+    </div>
+<hr />
 <p>
-    <a asp-action="Create">Create New</a>
+    
 </p>
-<table class="table">
+<table id="tblData" class="table">
     <thead>
         <tr>
             <th>
@@ -18,7 +25,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.DateCreated)
             </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -31,9 +38,9 @@
                 @Html.DisplayFor(modelItem => item.DateCreated)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" class="btn btn-outline-warning text-black-50" asp-route-id="@item.Id"><i class="fa fa-pencil" aria-hidden="true"></i></a> 
+                <a asp-action="Details" class="btn btn-outline-primary" asp-route-id="@item.Id"> <i class="fa fa-info-circle" aria-hidden="true"></i> </a> 
+                <a asp-action="Delete" class="btn btn-outline-danger" asp-route-id="@item.Id" onclick="return confirm('Are you sure you want to delete this record')"><i class="fa fa-trash" aria-hidden="true"></i></a>
             </td>
         </tr>
 }
